--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
         </div>
 
     </main>
-    <footer class="bg-primary">
+    <!-- <footer class="bg-primary">
         <div>
             <a>Twitter</a>
             <a>LinkedIn</a>
             <a>Github</a>
         </div>
-    </footer>
+    </footer> -->
 </body>
 <!-- Latest compiled and minified JavaScript -->
 
@@ -111,6 +111,29 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap.min.js"></script>
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.3/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.9.3/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyCwYUSwe3RwTKC15kCeEz-F_QBVS21QjdQ",
+      authDomain: "compoundbetting-d767b.firebaseapp.com",
+      projectId: "compoundbetting-d767b",
+      storageBucket: "compoundbetting-d767b.appspot.com",
+      messagingSenderId: "2264748607",
+      appId: "1:2264748607:web:8fd63d9d7a1ee444261e8a",
+      measurementId: "G-JWSDKJ5XSR"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 <script>
     'use strict';
 
