--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             <div class="row">
                
                 <div class="col-lg-10 col-lg-offset-1">
-                    <div class="col-lg-4 pull-left" style="color:crimson">
+                    <!-- <div class="col-lg-4 pull-left" style="color:crimson">
                         NB: Restart app if not working.
-                    </div>
+                    </div> -->
                     <div class="col-lg-4 pull-right" >
                         <button class="btn btn-primary calculate pull-right">Calculate</button>
                     </div>
