--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                 Compound Betting Calculator
             </div>
     
-            <div class="betting_tip">
-                <!-- <a href="" style="color:white">Betting Tip</a> -->
+            <!-- <div class="betting_tip">
+                <a href="" style="color:white">Betting Tip</a>
                 <a href="https://samuelaidoo45.github.io/compoundbetting/livematch.html" target="_blank" style="color:white">Live Match</a>
-            </div>
+            </div> -->
         </div>
     </header>
     <main>
