--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@
                             </tr>
                             
                               <tr>
-                                        <td>1</td>
+                                  <td><label>3</label></td>
                                         <td>Benfica vs FC Vizela</td>
                                         <td>Handicap(1:0)</td>
                                         <td ><label class="label label-success">WON</label></td>
     
                                     </tr>
                                     <tr>
-                                        <td>2</td>
+                                        <td><label>3</label></td>
                                         <td>West Bromwich vs Burnley</td>
                                         <td>Handicap(0:2)</td>
                                         <td ><label class="label label-success">WON</label></td>  
