--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
                 <div class="modal-body">
                     <p>
-                        <p style="color:crimson; text-align: center;">NB: <p>Review before staking.</p><p>Run your bet on a number of days you can afford</p><p>Use the calculator to calculate for the profit you want to get.</p>
+                        <p style="color:crimson; text-align: center;">NB: <p  style="color:crimson; text-align: center;">Review before staking.</p><p  style="color:crimson; text-align: center;">Run your bet on a number of days you can afford</p><p  style="color:crimson; text-align: center;">Use the calculator to calculate for the profit you want to get.</p>
                         <div class="table-responsive col-lg-10 col-lg-offset-1">
                             <table class="table" id="example2">
                                 <thead>
