--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
                                 <tbody class="records">
                                     <tr>
                                         <td>1</td>
-                                        <td>Borussia M'gladbach vs Mainz<td>
+                                        <td>Borussia M'gladbach vs Mainz</td>
                                         <td>Handicap(2:0)</td>
                                         <td>1.13</td>
                                     </tr>
                                     <tr>
                                         <td>2</td>
-                                        <td>Villarreal vs Elche CF<td>
+                                        <td>Villarreal vs Elche CF</td>
                                         <td>Handicap(1:0)</td>
                                         <td>1.08</td>
                                     </tr>
