--- a/index.html
+++ b/index.html
@@ -171,9 +171,15 @@
                                 <tbody class="records">
                                     <tr>
                                         <td>1</td>
-                                        <td>AC Monza vs Atalanta</td>
-                                        <td>Handicap(0:1)</td>
-                                        <td>1.23</td>
+                                        <td>Sevilla vs Man City</td>
+                                        <td>Over 1.5</td>
+                                        <td>1.18</td>
+                                    </tr>
+                                     <tr>
+                                        <td>1</td>
+                                        <td>PSG vs Juventus</td>
+                                        <td>Over 0.5</td>
+                                        <td>1.02</td>
                                     </tr>
                                    
                                 </tbody>
@@ -280,6 +286,13 @@
                                         <td><label>5</label></td>
                                         <td>Villarreal vs Elche CF</td>
                                         <td>Handicap(1:0)</td>
+                                        <td ><label class="label label-success">WON</label></td>  
+                                    </tr>
+                            
+                             <tr>
+                                 <td><label>6</label></td>
+                                        <td>AC Monza vs Atalanta</td>
+                                        <td>Handicap(0:1)</td>
                                         <td ><label class="label label-success">WON</label></td>  
                                     </tr>
 
