--- a/index.html
+++ b/index.html
@@ -171,15 +171,15 @@
                                 <tbody class="records">
                                     <tr>
                                         <td>1</td>
-                                        <td>Sevilla vs Man City</td>
+                                        <td>Barcelona vs FC Viktoria Plzen</td>
                                         <td>Over 1.5</td>
-                                        <td>1.18</td>
+                                        <td>1.08</td>
                                     </tr>
                                      <tr>
                                         <td>2</td>
-                                        <td>PSG vs Juventus</td>
-                                        <td>Over 0.5</td>
-                                        <td>1.02</td>
+                                        <td>Inter Milan vs Bayern Munich</td>
+                                        <td>Over 1.5</td>
+                                        <td>1.14</td>
                                     </tr>
                                    
                                 </tbody>
@@ -293,6 +293,19 @@
                                  <td><label>6</label></td>
                                         <td>AC Monza vs Atalanta</td>
                                         <td>Handicap(0:1)</td>
+                                        <td ><label class="label label-success">WON</label></td>  
+                                    </tr>
+                            
+                               <tr>
+                                   <td><label>7</label></td>
+                                        <td>Sevilla vs Man City</td>
+                                        <td>Over 1.5</td>
+                                        <td ><label class="label label-success">WON</label></td>  
+                                    </tr>
+                                     <tr>
+                                         <td><label>7</label></td>
+                                        <td>PSG vs Juventus</td>
+                                        <td>Over 0.5</td>
                                         <td ><label class="label label-success">WON</label></td>  
                                     </tr>
 
