--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
                 <div class="modal-body">
                     <p>
-                    <p style="color:crimson; text-align: center;">NB:<p style="color:crimson; text-align:center;"><label>SPORTYBET BOOKING CODE: B5DF359</label> <p  style="color:crimson; text-align: center;">Review before staking.</p><p  style="color:crimson; text-align: center;">Run your bet on a number of days you can afford</p><p  style="color:crimson; text-align: center;">Use the calculator to calculate for the profit you want to get.</p>
+                    <p style="color:crimson; text-align: center;">NB:<p style="color:crimson; text-align:center;"><label>SPORTYBET BOOKING CODE: 14A66A2</label> <p  style="color:crimson; text-align: center;">Review before staking.</p><p  style="color:crimson; text-align: center;">Run your bet on a number of days you can afford</p><p  style="color:crimson; text-align: center;">Use the calculator to calculate for the profit you want to get.</p>
                         <div class="table-responsive col-lg-10 col-lg-offset-1">
                             <table class="table" id="example2">
                                 <thead>
@@ -171,15 +171,15 @@
                                 <tbody class="records">
                                     <tr>
                                         <td>1</td>
-                                        <td>PSV Eindhoven vs Bodoe/Glimt</td>
+                                        <td>RC Lens vs Troyes</td>
                                         <td>Over 1.5</td>
-                                        <td>1.12</td>
+                                        <td>1.19</td>
                                     </tr>
                                      <tr>
                                         <td>2</td>
-                                        <td>Villarreal vs KKS Lech Pozan</td>
-                                        <td>Over 1.5</td>
-                                        <td>1.12</td>
+                                        <td>Vitoria SC Guimarares vs Santa Clara</td>
+                                        <td>Home(2:0)</td>
+                                        <td>1.05</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -317,6 +317,18 @@
                                      <tr>
                                          <td><label>8</label></td>
                                         <td>Inter Milan vs Bayern Munich</td>
+                                        <td>Over 1.5</td>
+                                        <td ><label class="label label-success">WON</label></td>  
+                                    </tr>
+                               <tr>
+                                   <td><label>9</label></td>
+                                        <td>PSV Eindhoven vs Bodoe/Glimt</td>
+                                        <td>Over 1.5</td>
+                                        <td ><label class="label label-success">WON</label></td>  
+                                    </tr>
+                                     <tr>
+                                         <td><label>9</label></td>
+                                        <td>Villarreal vs KKS Lech Pozan</td>
                                         <td>Over 1.5</td>
                                         <td ><label class="label label-success">WON</label></td>  
                                     </tr>
