--- a/index.html
+++ b/index.html
@@ -336,13 +336,13 @@
                                          <td><label>9</label></td>
                                         <td>Villarreal vs KKS Lech Pozan</td>
                                         <td>Over 1.5</td>
-                                        <td ><label class="label label-danger">LOSE</label></td>  
+                                        <td ><label class="label label-succes">WON</label></td>  
                                     </tr>
                                 <tr>
                                         <td>1</td>
                                         <td>RC Lens vs Troyes</td>
                                         <td>Over 1.5</td>
-                                        <td>1.19</td>
+                                        <td ><label class="label label-danger">LOSE</label></td>  
                                     </tr>
                                      <tr>
                                         <td>2</td>
