--- a/index.html
+++ b/index.html
@@ -339,13 +339,13 @@
                                         <td ><label class="label label-succes">WON</label></td>  
                                     </tr>
                                 <tr>
-                                        <td>1</td>
+                                    <td><label>10</label></td>
                                         <td>RC Lens vs Troyes</td>
                                         <td>Over 1.5</td>
                                         <td ><label class="label label-danger">LOSE</label></td>  
                                     </tr>
                                      <tr>
-                                        <td>2</td>
+                                         <td><label>10</label></td>
                                         <td>Vitoria SC Guimarares vs Santa Clara</td>
                                         <td>Home(2:0)</td>
                                         <td ><label class="label label-success">WON</label></td>  
