--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                                          <td><label>9</label></td>
                                         <td>Villarreal vs KKS Lech Pozan</td>
                                         <td>Over 1.5</td>
-                                        <td ><label class="label label-succes">WON</label></td>  
+                                        <td ><label class="label label-success">WON</label></td>  
                                     </tr>
                                 <tr>
                                     <td><label>10</label></td>
