--- a/index.html
+++ b/index.html
@@ -171,21 +171,9 @@
                                 <tbody class="records">
                                     <tr>
                                         <td>1</td>
-                                        <td>Marseille vs Lille</td>
-                                        <td>Handicap(2:0)</td>
-                                        <td>1.10</td>
-                                    </tr>
-                                     <tr>
-                                        <td>2</td>
-                                        <td>Atletico Madrid vs Celta Vigo</td>
-                                        <td>Handicap(2:0)</td>
-                                        <td>1.04</td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>Bayern Munich vs Stuttgart</td>
-                                        <td>Handicap(1:0)</td>
-                                        <td>1.06</td>
+                                        <td>Real Madrid vs Mallorca</td>
+                                        <td>Home</td>
+                                        <td>1.31</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -348,6 +336,25 @@
                                          <td><label>10</label></td>
                                         <td>Vitoria SC Guimarares vs Santa Clara</td>
                                         <td>Home(2:0)</td>
+                                        <td ><label class="label label-success">WON</label></td>  
+                                    </tr>
+                            
+                              <tr>
+                                         <td><label>10</label></td>
+                                        <td>Marseille vs Lille</td>
+                                        <td>Handicap(2:0)</td>
+                                        <td ><label class="label label-success">WON</label></td>  
+                                    </tr>
+                                     <tr>
+                                         <td><label>10</label></td>
+                                        <td>Atletico Madrid vs Celta Vigo</td>
+                                        <td>Handicap(2:0)</td>
+                                        <td ><label class="label label-success">WON</label></td>  
+                                    </tr>
+                                    <tr>
+                                         <td><label>10</label></td>
+                                        <td>Bayern Munich vs Stuttgart</td>
+                                        <td>Handicap(1:0)</td>
                                         <td ><label class="label label-success">WON</label></td>  
                                     </tr>
 
