--- a/index.html
+++ b/index.html
@@ -215,6 +215,45 @@
                             </tr>
                         </thead>
                         <tbody class="records">
+                            
+                            <div class="container-fluid">
+		
+<div id="faq" role="tablist" aria-multiselectable="true">
+
+<div class="panel panel-default">
+<div class="panel-heading" role="tab" id="questionOne">
+<h5 class="panel-title">
+<a data-toggle="collapse" data-parent="#faq" href="#answerOne" aria-expanded="false" aria-controls="answerOne">
+Week 1
+</a>
+</h5>
+</div>
+<div id="answerOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="questionOne">
+<div class="panel-body">
+Week 1
+</div>
+</div>
+</div>
+
+<div class="panel panel-default">
+<div class="panel-heading" role="tab" id="questionTwo">
+<h5 class="panel-title">
+<a class="collapsed" data-toggle="collapse" data-parent="#faq" href="#answerTwo" aria-expanded="false" aria-controls="answerTwo">
+Week 2
+</a>
+</h5>
+</div>
+<div id="answerTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="questionTwo">
+<div class="panel-body">
+Week 2
+</div>
+</div>
+</div>
+
+</div>
+
+</div>
+		
 
                             <tr> 
 
