--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 </div>
                 <div class="modal-body">
                     <p>
-                    <p style="color:crimson; text-align: center;">NB:<p style="color:crimson; text-align:center;"><label>SPORTYBET BOOKING CODE: 5C7A492C</label> <p  style="color:crimson; text-align: center;">Review before staking.</p><p  style="color:crimson; text-align: center;">Run your bet on a number of days you can afford</p><p  style="color:crimson; text-align: center;">Use the calculator to calculate for the profit you want to get.</p>
+                    <p style="color:crimson; text-align: center;">NB:<p style="color:crimson; text-align:center;"><label>SPORTYBET BOOKING CODE: 5C7A492C</label> <p  style="color:crimson; text-align: center;">Review before staking.</p><p  style="color:crimson; text-align: center;">Run your bet on a number of days you can afford.Recommended - 10 days</p><p  style="color:crimson; text-align: center;">Use the calculator to calculate for the profit you want to get.</p>
                         <div class="table-responsive col-lg-10 col-lg-offset-1">
                             <table class="table" id="example2">
                                 <thead>
@@ -352,25 +352,6 @@ Week 1
                                          <td><label>10</label></td>
                                         <td>Vitoria SC Guimarares vs Santa Clara</td>
                                         <td>Home(2:0)</td>
-                                        <td ><label class="label label-success">WON</label></td>  
-                                    </tr>
-                            
-                              <tr>
-                                         <td><label>11</label></td>
-                                        <td>Marseille vs Lille</td>
-                                        <td>Handicap(2:0)</td>
-                                        <td ><label class="label label-success">WON</label></td>  
-                                    </tr>
-                                     <tr>
-                                         <td><label>11</label></td>
-                                        <td>Atletico Madrid vs Celta Vigo</td>
-                                        <td>Handicap(2:0)</td>
-                                        <td ><label class="label label-success">WON</label></td>  
-                                    </tr>
-                                    <tr>
-                                         <td><label>11</label></td>
-                                        <td>Bayern Munich vs Stuttgart</td>
-                                        <td>Handicap(1:0)</td>
                                         <td ><label class="label label-success">WON</label></td>  
                                     </tr>
 
