--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 					<tr>
                                         <td>2</td>
                                         <td>Reading FC vs Sunderland AFC</td>
-                                        <td>Handicap(2:)</td>
+                                        <td>Handicap(2:0)</td>
                                         <td>1.12</td>
                                    
                                     </tr>
