--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <header class="bg-primary col-lg-12">
         <div class="nav_container col-lg-10 col-lg-offset-1">
             <div class="heading">
-                Compound Betting Calculator
+                Compound Betting Calculator 
             </div>
 
             <div class="betting_tip">
@@ -473,6 +473,9 @@
             <a>Github</a>
         </div>
     </footer> -->
+   <footer>
+	   Happy New Year
+ </footer>
 </body>
 <!-- Latest compiled and minified JavaScript -->
 
