--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     </div>
 
 
-    <div class="modal fade" id="tipHistory" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal fade" id="tipHistory" tabindex="-1" role="document" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
