--- a/index.html
+++ b/index.html
@@ -57,6 +57,24 @@
         .modal-content {
         margin: 0 auto;
         } */
+
+                footer {
+            background-color: rgb(53, 103, 22);
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        .social-icons a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+
+        .social-icons i {
+            font-size: 24px;
+        }
+
 	    
 	  
 
@@ -477,9 +495,14 @@
             <a>Github</a>
         </div>
     </footer> -->
-   <footer>
-
- </footer>
+    <footer class="bg-primary">
+        <div class="social-icons">
+            <a href="https://twitter.com/_samuelaidoo" target="_blank"><i class="fab fa-twitter"></i></a>
+            <!-- <a href="https://www.linkedin.com/in/YourLinkedInProfile" target="_blank"><i class="fab fa-linkedin"></i></a> -->
+            <a href="https://github.com/samuelaidoo45" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+    </footer>
+    
 </body>
 <!-- Latest compiled and minified JavaScript -->
 
