--- a/index.html
+++ b/index.html
@@ -75,11 +75,35 @@
             font-size: 24px;
         }
 
-	    
-	  
+        html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
+footer {
+    background-color: rgb(53, 103, 22);
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+}
+
+  
 
 
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
         integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
@@ -497,9 +521,9 @@
     </footer> -->
     <footer class="bg-primary">
         <div class="social-icons">
-            <a href="https://twitter.com/_samuelaidoo" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://twitter.com/_samuelaidoo" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
             <!-- <a href="https://www.linkedin.com/in/YourLinkedInProfile" target="_blank"><i class="fab fa-linkedin"></i></a> -->
-            <a href="https://github.com/samuelaidoo45" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/samuelaidoo45" target="_blank"><i class="fab fa-github"> Github</i></a>
         </div>
     </footer>
     
