--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ footer {
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class="modal-title" id="modalLabel" style="text-align:center; text-transform:uppercase">Daily 1.2 odds bet tip</h4>
+                    <h4 class="modal-title" id="modalLabel" style="text-align:center; text-transform:uppercase">Bet tips</h4>
                 </div>
                 <div class="modal-body">
                     <p>
