--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             font-weight: bolder;
             margin-bottom: 20px;
             padding: 10px;
+            z-index: 1;
         }
 
         .inputs {
