--- a/index.html
+++ b/index.html
@@ -141,6 +141,37 @@
     <main>
         <div class="row">
 
+            <div class="table-responsive col-lg-10 col-lg-offset-1">
+                <table class="table" id="example2">
+                    <thead>
+                        <tr class="btn-primary">
+                            <th>SN</th>
+                            <th>Match</th>
+                            <th>Tip</th>
+                        </tr>
+                    </thead>
+                    <tbody class="records">
+                        <tr>
+                            <td>1</td>
+                            <td>Heimstetten VS 1860 Munchen 11</td>
+                            <td>GG(BOTH TEAMS TO SCORE)</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Bala Town vs The New Saints</td>
+                            <td>Away or Draw</td>
+                        </tr>
+
+                        <tr>
+                            <td>3</td>
+                            <td>Flora II vs TJK Legion II</td>
+                            <td>Home</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+
             <div class="col-lg-offset-1 col-lg-10">
                 <div class="col-lg-4">
                     <label>Initial Stake:</label>
@@ -224,51 +255,21 @@
                             <tbody class="records">
                                 <tr>
                                     <td>1</td>
-                                    <td>Norway vs Georgia</td>
-                                    <td>Home</td>
-
+                                    <td>Heimstetten VS 1860 Munchen 11</td>
+                                    <td>GG(BOTH TEAMS TO SCORE)</td>
                                 </tr>
                                 <tr>
                                     <td>2</td>
-                                    <td>Cameroon vs Burundi</td>
-                                    <td>Home or Draw</td>
-
-
+                                    <td>Bala Town vs The New Saints</td>
+                                    <td>Away or Draw</td>
                                 </tr>
 
                                 <tr>
                                     <td>3</td>
-                                    <td>Bolivia vs Argentina</td>
-                                    <td>Away</td>
-
-
-                                </tr>
-                                <tr>
-                                    <td>4</td>
-                                    <td>Japan vs Turkiye</td>
-                                    <td>Home or Away</td>
-
+                                    <td>Flora II vs TJK Legion II</td>
+                                    <td>Home</td>
                                 </tr>
 
-                                <tr>
-                                    <td>5</td>
-                                    <td>Sweden vs Austria</td>
-                                    <td>Home or Away</td>
-
-                                </tr>
-
-                                <tr>
-                                    <td>6</td>
-                                    <td>Italy vs Ukraine</td>
-                                    <td>Home or Draw</td>
-
-                                </tr>
-                                <tr>
-                                    <td>7</td>
-                                    <td>Belgium vs Estonia</td>
-                                    <td>Over 1.5</td>
-
-                                </tr>
                             </tbody>
                         </table>
                     </div>
