--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     </header>
     <main>
         <div class="row">
+            <p style="text-align: center;">DAILY BET TIPS</p>
 
             <div class="table-responsive col-lg-10 col-lg-offset-1">
                 <table class="table" id="example2">
