--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <p style="text-align: center;">DAILY BET TIPS</p>
 
             <div class="table-responsive col-lg-10 col-lg-offset-1">
-                <table class="table" id="example2">
+                <table class="table" id="">
                     <thead>
                         <tr class="btn-primary">
                             <th>SN</th>
