--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             margin-bottom: 20px;
             padding: 10px;
             z-index: 1;
+            height: 50px;
         }
 
         .inputs {
