--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compound Betting</title>
     <style>
-        html,
+        /* html,
         body {
             height: 100%;
             margin: 0;
@@ -17,7 +17,7 @@
         body {
             display: flex;
             flex-direction: column;
-        }
+        } */
 
         header {
             /* text-align: center; */
